--- a/root/index.html
+++ b/root/index.html
@@ -67,19 +67,114 @@
                     <button class="btn flex-center-center">Procurar Hotel</button>
                 </div>
             </nav>
+            <section class="hotel">
+                <article class="hotel-card">
+                    <figure class="hotel-content">
+                        <img src="./resources/images/placeholder.webp" alt="" class="hotel-picture">
+                        <figcaption class="hotel-details">
+                            <span class="hotel-title">
+                                <h3>Hotel Name</h3>
+                                <h3 class="text__yellow">RJ</h3>
+                            </span>
+                            <label for="" class="hotel-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                                ac dictum lacus. Nullam dignissim orci.</label>
+                        </figcaption>
+                    </figure>
+                </article>
+                <article class="hotel-card">
+                    <figure class="hotel-content">
+                        <img src="./resources/images/placeholder.webp" alt="" class="hotel-picture">
+                        <figcaption class="hotel-details">
+                            <span class="hotel-title">
+                                <h3>Hotel Name</h3>
+                                <h3 class="text__yellow">RJ</h3>
+                            </span>
+                            <label for="" class="hotel-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                                ac dictum lacus. Nullam dignissim orci.</label>
+                        </figcaption>
+                    </figure>
+                </article>
+                <article class="hotel-card">
+                    <figure class="hotel-content">
+                        <img src="./resources/images/placeholder.webp" alt="" class="hotel-picture">
+                        <figcaption class="hotel-details">
+                            <span class="hotel-title">
+                                <h3>Hotel Name</h3>
+                                <h3 class="text__yellow">RJ</h3>
+                            </span>
+                            <label for="" class="hotel-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                                ac dictum lacus. Nullam dignissim orci.</label>
+                        </figcaption>
+                    </figure>
+                </article>
+                <article class="hotel-card">
+                    <figure class="hotel-content">
+                        <img src="./resources/images/placeholder.webp" alt="" class="hotel-picture">
+                        <figcaption class="hotel-details">
+                            <span class="hotel-title">
+                                <h3>Hotel Name</h3>
+                                <h3 class="text__yellow">RJ</h3>
+                            </span>
+                            <label for="" class="hotel-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                                ac dictum lacus. Nullam dignissim orci.</label>
+                        </figcaption>
+                    </figure>
+                </article>
+                <article class="hotel-card">
+                    <figure class="hotel-content">
+                        <img src="./resources/images/placeholder.webp" alt="" class="hotel-picture">
+                        <figcaption class="hotel-details">
+                            <span class="hotel-title">
+                                <h3>Hotel Name</h3>
+                                <h3 class="text__yellow">RJ</h3>
+                            </span>
+                            <label for="" class="hotel-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                                ac dictum lacus. Nullam dignissim orci.</label>
+                        </figcaption>
+                    </figure>
+                </article>
+                <article class="hotel-card">
+                    <figure class="hotel-content">
+                        <img src="./resources/images/placeholder.webp" alt="" class="hotel-picture">
+                        <figcaption class="hotel-details">
+                            <span class="hotel-title">
+                                <h3>Hotel Name</h3>
+                                <h3 class="text__yellow">RJ</h3>
+                            </span>
+                            <label for="" class="hotel-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                                ac dictum lacus. Nullam dignissim orci.</label>
+                        </figcaption>
+                    </figure>
+                </article>
+                <article class="hotel-card">
+                    <figure class="hotel-content">
+                        <img src="./resources/images/placeholder.webp" alt="" class="hotel-picture">
+                        <figcaption class="hotel-details">
+                            <span class="hotel-title">
+                                <h3>Hotel Name</h3>
+                                <h3 class="text__yellow">RJ</h3>
+                            </span>
+                            <label for="" class="hotel-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                                ac dictum lacus. Nullam dignissim orci.</label>
+                        </figcaption>
+                    </figure>
+                </article>
+                <article class="hotel-card">
+                    <figure class="hotel-content">
+                        <img src="./resources/images/placeholder.webp" alt="" class="hotel-picture">
+                        <figcaption class="hotel-details">
+                            <span class="hotel-title">
+                                <h3>Hotel Name</h3>
+                                <h3 class="text__yellow">RJ</h3>
+                            </span>
+                            <label for="" class="hotel-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+                                ac dictum lacus. Nullam dignissim orci.</label>
+                        </figcaption>
+                    </figure>
+                </article>
+            </section>
 
-            <article class="hotel-card">
-                <figure class="hotel-content">
-                    <img src="" alt="" class="hotel-picture">
-                    <figcaption class="hotel-details">
-                        <span class="hotel-title">
-                            <h2></h2>
-                            <h2 class="hotel-location" />
-                        </span>
-                        <label for="" class="hotel-desc"></label>
-                    </figcaption>
-                </figure>
-            </article>
+
 
             <section class="promotion banner-content">
                 <!-- <div class="promotion-content"> -->
